--- a/Project/templates/selfcenter.html
+++ b/Project/templates/selfcenter.html
@@ -69,24 +69,21 @@
         </div>
     </div>
 
+    {# 希望点击不同的右边显示不同的页面#}
     <div class="col-sm-3">
         <ul class="list-group">
-            <li class="list-group-item active">Articles</li>
-            <li class="list-group-item active">Articles</li>
-            <li class="list-group-item active">Articles</li>
-            <li class="list-group-item active">Articles</li>
-            <li class="list-group-item active">Articles</li>
-
-            <li class="list-group-item"><a href="#" class="text-primary">March 2014</a></li>
-            <li class="list-group-item"><a href="#" class="text-primary">February 2014</a></li>
-            <li class="list-group-item"><a href="#" class="text-primary">January 2014</a></li>
-            <li class="list-group-item"><a href="#" class="text-primary">December 2013</a></li>
-            <li class="list-group-item"><a href="#" class="text-primary">November 2013</a></li>
-            <li class="list-group-item"><a href="#" class="text-primary">October 2013</a></li>
-            <li class="list-group-item"><a href="#" class="text-primary">September 2013</a></li>
+            <li class="list-group-item active">个人信息</li>
+            <li class="list-group-item active">文章管理</li>
+            <li class="list-group-item active">评论管理</li>
+            {% if current_user.admin %}
+                <li class="list-group-item"><a href="#" class="text-primary">用户管理</a></li>
+                <li class="list-group-item"><a href="#" class="text-primary">战队管理</a></li>
+                <li class="list-group-item"><a href="#" class="text-primary">选手管理</a></li>
+                <li class="list-group-item"><a href="#" class="text-primary">赛程管理</a></li>
+                <li class="list-group-item"><a href="#" class="text-primary">比赛数据管理</a></li>
+            {% endif %}
         </ul>
     </div><!-- /.blog-sidebar -->
-
 
 {% endblock %}
 
