--- a/Project/templates/discussion.html
+++ b/Project/templates/discussion.html
@@ -12,13 +12,13 @@
         #carousel-example-generic {
             margin-top: 80px;
             height: 400px;
-            margin-bottom: 80px;
+            margin-bottom: 50px;
         }
 
         /* 图片格子 */
-        {##carousel-example-generic .carousel-inner > .item {#}
-        {#    height: 400px;#}
-        {#}#}
+        /*{##carousel-example-generic .carousel-inner > .item {#}*/
+        /*{#    height: 400px;#}*/
+        /*{#}#}*/
 
         /* 图片尺寸 */
         #carousel-example-generic .carousel-inner > .item > img {
@@ -40,12 +40,12 @@
 
 
 {% block content %}
-    <div class="row">
-        {#  place holder  #}
-        <div class="col-md-1"></div>
+    <div class="row col-md-offset-1 col-md-8">
+        <!--{#  place holder  #}-->
+        <!--<div class="col-md-1"></div>-->
 
-        {#  carousel #}
-        <div id="carousel-example-generic" class="col-md-8 carousel slide" data-ride="carousel">
+        <!--图片幻灯片-->
+        <div id="carousel-example-generic" class="col-md-12 carousel slide" data-ride="carousel">
         <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -57,93 +57,211 @@
           <div class="carousel-inner" role="listbox">
             <div class="item active">
               <img src="{{ static('img/S9_4.jpg')}}" alt="First slide">
-              <div class="carousel-caption">
-                ...
-              </div>
             </div>
             <div class="item">
               <img id="S9_1" src="{{ static('img/S9_1.jpg')}}" alt="Second slide">
-              <div class="carousel-caption">
-                ...
-              </div>
             </div>
-            ...
           </div>
 
           <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev" style="margin-left: 15px">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next" style="margin-right: 15px">
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
         </div>
 
-        {#  右边栏 #}
-        <div class="col-md-2 container thumbnail" id="right_block">
-                <a href="#" >
-                    <img class="img-circle" src="{{ static('img/FPX.png') }}" alt="..."
-                         style="width: 150px; height: 150px; margin: 0 auto">
-                </a>
-                <h3>Thumbnail label</h3>
-                <p>...</p>
-    {#                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>#}
-                <a role="button" class="btn btn-primary btn-lg" href="{{ url_for('front.apost') }}">
-                    发布帖子
-                </a>
-                <ul class="nav nav-pills" role="tablist" style="margin-top: 20px; margin-left: 30px">
-                    {% for board in boards %}
-                        <li role="presentation">
-                            <a href="#"><p class="text-primary">{{ board.name }}</p><span class="badge">{{ board.article_num }}</span></a>
-                        </li>
-                    {% endfor %}
-                </ul>
-        </div>
-        {#  place holder  #}
-        <div class="col-md-1"></div>
+        <!--下拉菜单 宽度自适应-->
+        <!--<div class="btn-group btn-group-justified" role="group">-->
+            <!--<div class="btn-group" role="group">-->
+                <!--<a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button">-->
+                    <!--Dropdown-->
+                    <!--<span class="caret"></span>-->
+                <!--</a>-->
+                <!--<ul class="dropdown-menu">-->
+                    <!--<li><a href="#">choice1</a></li>-->
+                    <!--<li><a href="#">choice2</a></li>-->
+                    <!--<li><a href="#">choice3</a></li>-->
+                <!--</ul>-->
+            <!--</div>-->
+
+        <!--</div>-->
+
+        <!--帖子表格-->
+        <!--<div class="col-md-12">-->
+            <!--<table class="table table-hover">-->
+                <!--<thread>-->
+                    <!--<tr>-->
+                        <!--<th>帖子</th>-->
+                        <!--<th>作者</th>-->
+                        <!--<th>评论量</th>-->
+                        <!--<th>发表时间</th>-->
+                    <!--</tr>-->
+                <!--</thread>-->
+                <!--<tbody>-->
+                    <!--{% for article in articles %}-->
+                    <!--&lt;!&ndash;<div class="row featurette">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="col-md-1"></div>&ndash;&gt;-->
+
+                        <!--&lt;!&ndash;<div class="col-md-2">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<img class="featurette-image img-responsive center-block" src="{{ static('img/FPX.png') }}" alt="Generic placeholder image">&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="col-md-6">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<h2 class="featurette-heading">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<a href="{{url_for('front.article',article_id=article.id)}}">{{ article.title }}</a>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<span class="text-muted">{{article.author.username}} </span></h2>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<br>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p class="lead">发表时间：{{article.register_time}}</p>&ndash;&gt;-->
+                        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+                        <!--&lt;!&ndash;{#  place holder  #}&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="col-md-3"></div>&ndash;&gt;-->
+
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                    <!--<tr>-->
+                        <!--&lt;!&ndash;<h4 class="featurette-heading">&ndash;&gt;-->
+                        <!--<td><h4><a href="{{url_for('front.article',article_id=article.id)}}">{{ article.title }}</a></h4></td>-->
+                        <!--<td><h4><span class="text-muted">{{article.author.username}} </span></h4></td>-->
+                        <!--<td><h4><span class="text-muted">{{article.comment_num}} </span></h4></td>-->
+                        <!--<td style=""><span>{{article.register_time}}</span></td>-->
+                    <!--</tr>-->
+
+                    <!--{% endfor %}-->
+                <!--</tbody>-->
+
+            <!--</table>-->
+        <!--</div>-->
+
+        <!--讨论区帖子-->
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading" style="font-size:12px;">
+                    <div class="row">
+                        <div class="col-sm-6">
+                                Choice:
+                            <select id="within" name="within">
+                                <option selected value="0">All Topics</option>
+                                <option value="1">One Day</option>
+                                <option value="2">One Week</option>
+                                <option value="3">One Month</option>
+                                <option value="4">One Year</option>
+                            </select>
+                                Order:
+                            <select id="orderby" name="orderby">
+                                <option selected value="0">Publish</option>
+                                <option value="1">Author</option>
+                            </select>
+                            <select id="desc" name="desc">
+                                <option selected value="0">Desc</option>
+                                <option value="1">Asc</option>
+                            </select>
+                        </div>
+                        <div class="col-sm-2 hidden-xs">
+                            作者
+                        </div>
+                        <div class="col-sm-2 hidden-xs">
+                            评论量
+                        </div>
+                        <div class="col-sm-2 hidden-xs">
+                            发表时间
+                        </div>
+                    </div>
+                </div>
+
+                {% for article in articles %}
+                <div class="panel-body" style="padding:6px;border-bottom:1px solid #eee">
+                    <div class="row">
+                        <div class="col-md-6 media" >
+                            <!--<div class="media-left">-->
+                                <!--<a href="/u/vitozZ">-->
+                                    <!--<img class="img-circle" src="{{static('img/IG.png')}}" style="width:48px;height:48px">-->
+                                <!--</a>-->
+                            <!--</div>-->
+                            <div class="media-body text-center" style="vertical-align: middle">
+                                <h3 class="media-heading">
+                                    <!--<a href="/topic/4079" style="color:#555">ceshi</a>-->
+                                    <a href="{{url_for('front.article',article_id=article.id)}}" >{{ article.title }}</a>
+                                </h3>
+                                <!--<span class="visible-xs-inline">-->
+                                    <!--<small style="font-size:10px;">由<a href="/u/vitozZ">vitozZ</a></small>-->
+                                    <!--<small style="color:#999;font-size:10px;">-->
+                                        <!--2018-7-25 8:28发布-->
+                                    <!--</small>-->
+                                <!--</span>-->
+                                <!--<div class="hidden-xs">-->
+                                    <!--<a class="tag" href="/tags/ceshi">ceshi</a>-->
+                                <!--</div>-->
+                            </div>
+                        </div>
+                        <!--作者-->
+                        <div class="col-md-2 hidden-xs" style="padding-top:5px;">
+                            <span>{{article.author.username}}</span>
+                        </div>
+                        <!--评论量-->
+                        <div class="col-md-2  hidden-xs" style="padding:5px 5px 5px 20px;margin:0">
+                            <span class="text-muted">{{article.comment_num}} </span>
+                        </div>
+                        <!--发表时间-->
+                        <div class="col-md-2 hidden-xs" style="padding:5px;margin:0;">
+                            <span style="font-size:12px;color:#999;">{{article.register_time}}</span>
+                        </div>
+                    </div>
+                </div> <!--pannel body-->
+                {% endfor %}
+            </div> <!--pannel-->
+        </div> <!--col-md-12 讨论区帖子表格-->
+    </div> <!--row 左边大块-->
+
+    {#  右边栏 #}
+    <div class="col-md-2 col-md-offset-9 container thumbnail" id="right_block" data-spy="affix">
+            <a href="#" >
+                <img class="img-circle" src="{{ static('img/FPX.png') }}" alt="..."
+                     style="width: 150px; height: 150px; margin: 0 auto">
+            </a>
+            <h3 style="text-align: center">Thumbnail label</h3>
+            <p style="text-align: center">...</p>
+<!--{#          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>#}-->
+            <a role="button" class="btn btn-primary btn-lg" href="{{ url_for('front.apost') }}" style="display: block; margin: 0 auto">
+                发布帖子
+            </a>
+            <ul class="nav nav-pills" role="tablist" style="margin-top: 20px; margin-left: 30px">
+                {% for board in boards %}
+                    <li role="presentation">
+                        <a href="#"><p class="text-primary">{{ board.name }}</p><span class="badge">{{ board.article_num }}</span></a>
+                    </li>
+                {% endfor %}
+            </ul>
     </div>
-    {% for article in articles %}
-        <div class="row featurette">
-        <div class="col-md-1"></div>
 
-        <div class="col-md-2">
-            <img class="featurette-image img-responsive center-block" src="{{ static('img/FPX.png') }}" alt="Generic placeholder image">
-        </div>
-        <div class="col-md-6">
-            <h2 class="featurette-heading">
-            <a href="{{url_for('front.article',article_id=article.id)}}">{{ article.title }}</a>
-            <span class="text-muted">{{article.author.username}} </span></h2>
-            <br>
-            <p class="lead">发表时间：{{article.register_time}}</p>
-        </div>
 
-        {#  place holder  #}
-        <div class="col-md-3"></div>
 
+    {#  place holder  #}
+    <div class="col-md-1"></div>
+
+    <div class="col-md-4 col-lg-offset-4">
+        <nav aria-label="Page navigation">
+          <ul class="pagination">
+            <li>
+              <a href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+              <a href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
     </div>
 
-    {% endfor %}
-
-    <nav aria-label="Page navigation">
-      <ul class="pagination">
-        <li>
-          <a href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
-        </li>
-        <li class="active"><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li>
-          <a href="#" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
 
 {% endblock %}
