--- a/Project/templates/home.html
+++ b/Project/templates/home.html
@@ -3,6 +3,7 @@
     S9总决赛
 {% endblock %}
 {% block head %}
+    <link href="{{ static('css/cover.css') }}" rel="stylesheet">
     <style>
         body {
             background-image: url('{{ static('img/S9_1.jpg') }}');
