correct some model

--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -53,7 +53,7 @@
                         <li><a href="#">比赛数据</a></li>
                         <li role="separator" class="divider"></li>
                         <li class="dropdown-header">参赛战队</li>
-                        <li><a href="#">战队资料</a></li>
+                        <li><a href="{{ url_for('front.teams')}}">战队资料</a></li>
                         <li><a href="#">选手资料</a></li>
                       </ul>
                     </li>
